<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tourisme_au_qu_bec"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue_message"
            android:textSize="18dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choix_ville"
            android:textSize="18dp"
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/mltBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/mtl"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"/>
            <Button
                android:id="@+id/granbyBtn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/granby"
                android:textSize="16dp"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
